infra/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ketchup
spec:
  selector:
    matchLabels:
      name: ketchup
  template:
    metadata:
      labels:
        name: ketchup
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: http
        prometheus.io/port: "1080"
    spec:
      containers:
        - name: ketchup
          image: vibioh/ketchup
          ports:
            - name: http
              containerPort: 1080
          readinessProbe:
            httpGet:
              path: /health
              port: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            requests:
              memory: 24M
            limits:
              memory: 64M
