infra/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ketchup
spec:
  selector:
    name: ketchup
  ports:
    - name: http
      port: 80
      targetPort: http
